begin send email

--- a/src/app/restrict/expense/list-expenses/list-standard/list-standard.component.html
+++ b/src/app/restrict/expense/list-expenses/list-standard/list-standard.component.html
@@ -21,7 +21,7 @@
         <td>{{ item.expenseDate }}</td>
         <td>{{ item.total }}</td>
         <td colspan="3">
-            <button class="btn btn-secondary" type="button" (click)="onView(item)"><i class="far fa-eye"></i></button>
+            <button class="btn btn-secondary" type="button" (click)="onPrint(item)"><i class="far fa-file-pdf"></i></button>
             &nbsp;
             <button class="btn btn-success" type="button" (click)="onEdit(item)"><i class="far fa-edit"></i></button>
             &nbsp;
