--- a/src/app/restrict/expense/view-expense/view-long-expense/view-long-expense.component.html
+++ b/src/app/restrict/expense/view-expense/view-long-expense/view-long-expense.component.html
@@ -1,69 +1,48 @@
 <!--add fixed expense-->
-<div class="container">
-    <h1 class="text-blue"> Ver - {{ expenseType.name }}</h1>
-    <div class="expense-description"> {{ expenseType.description }} </div>
-</div>
-<br>
-<!--form expenses-->
-<form>
+<div #content>
+    <div class="container">
+        <h1 class="text-blue"> Ver - {{ expenseType.name }}</h1>
+        <div class="expense-description"> {{ expenseType.description }} </div>
+    </div>
+    <br>
     <div class="container-fluid">
         <div class="row">
-            <!-- expense name -->
             <div class="col-sm-6">
-                <label for="expenseName">Nome da despesa:</label>
-                <input readonly id="expenseName" name="expenseName" type="text" class="form-control" 
-                    [(ngModel)]="expense.expenseName">
+                <label>Nome da despesa:</label> {{ expense.expenseName }}
             </div>
         </div>
         <br>
         <div class="row">
-            <!--expense date-->
             <div class="col-sm-6">
-                <label for="expenseDate" class="control-label">Data da despesa:</label>
-                <input readonly id="expenseDate" name="expenseDate" type="text" class="form-control" 
-                    [(ngModel)]="expense.expenseDate">
-            </div>
-            <!-- limit date  -->
-            <div class="col-sm-6">
-                <label for="paymentDate">Data limite do pagamento:</label>
-                <input readonly id="paymentDate" name="paymentDate" type="text" class="form-control" 
-                    [(ngModel)]="expense.paymentDate">
+                <label>Data da despesa:</label> {{ expense.expenseDate }}
             </div>
         </div>
         <br>
         <div class="row">
-            <!-- comments -->
+            <div class="col-sm-6">
+                <label>Data limite do pagamento:</label> {{ expense.paymentDate }}
+            </div>
+        </div>
+        <br>
+        <div class="row">
             <div class="col-sm-12">
-                <label for="comments">Observações:</label>
-                <textarea readonly id="comments" name="comments" type="text" rows="2" class="form-control ml-1"
-                    [(ngModel)]="expense.comments"></textarea>
+                <label for="comments">Observações:</label> {{ expense.comments }}
             </div>
         </div>
         <br>
         <div class="row">
-            <!-- cost value  -->
             <div class="col-sm-4">
-                <label for="cost">Custo da despesa:</label>
-                <input readonly id="cost" name="cost" type="number" class="form-control" 
-                [(ngModel)]="expense.total">
+                <label for="cost">Custo da despesa:</label> {{ expense.total }}
             </div>
-            <!-- first time payed value  -->
             <div class="col-sm-4">
-                <label for="firstTimePayed">Valor pago no ato da compra:</label>
-                <input readonly id="firstTimePayed" name="firstTimePayed" type="number" class="form-control" 
-                [(ngModel)]="beginPayment">
+                <label>Valor pago no ato da compra:</label> {{ beginPayment }}
             </div>
-            <!--How mutch is it missing to end of payment-->
             <div class="col-sm-4">
-                <label for="difference">Quanto falta para estar pago:</label>
-                <input readonly id="difference" name="difference" type="number" class="form-control" 
-                    [(ngModel)]="calculateDifference">
+                <label for="difference">Quanto falta para estar pago:</label> {{ calculateDifference }}
             </div>
         </div>
     </div>
     <br>
-    <br>
-    <!-- render items -->
     <div>
         <hr>
         <h4 class="mb-2 text-blue">Items da prestação</h4>
@@ -73,46 +52,34 @@
             <br>
             <p>Referente a:</p>
             <div class="row">
-                <!-- reference date  -->
                 <div class="col-sm-4">
-                    <label for="itemsMonth">Mês:</label>
-                    <input readonly id="itemsMonth" name="itemsMonth{{i}}" class="form-control ml-1" 
-                        [(ngModel)]="itemArray[i].month">
+                    <label for="itemsMonth">Mês:</label> {{ itemArray[i].month }}
                 </div>
                 <div class="col-sm-4">
-                    <label for="itemsYear">Ano:</label>
-                    <input readonly id="itemsYear" name="itemsYear{{i}}" class="form-control ml-1" 
-                    [(ngModel)]="itemArray[i].year">
+                    <label for="itemsYear">Ano:</label> {{ itemArray[i].year }}
                 </div>
-                <!--render date-->
                 <div class="col-sm-4">
-                    <label for="renderDate">Data da prestação:</label>
-                    <input readonly id="renderDate" name="renderDate{{i}}" type="text" class="form-control" 
-                    [(ngModel)]="itemArray[i].expenseDate">
+                    <label for="renderDate">Data da prestação:</label> {{ itemArray[i].expenseDate }}
                 </div>
             </div>
             <br>
             <div class="row">
-                <!--value-->
                 <div class="col-sm-4">
-                    <label for="renderValue">Valor da prestação:</label>
-                    <input readonly id="renderValue" name="renderValue{{i}}" type="number" class="form-control"
-                        [(ngModel)]="itemArray[i].value">
+                    <label for="renderValue">Valor da prestação:</label> {{ itemArray[i].value }}
                 </div>
             </div>
-            <br>
         </div>
         <br>
         <hr>
         <div class="row">
             <div class="col-sm-4">
-                <label>Total:</label>
-                <input readonly id="value" class="form-control" [(ngModel)]="calculateTotal" name="total">
+                <label>Total:</label> {{ calculateTotal }}
             </div>
         </div>
     </div>
-    <!--end of render items-->
-
+    <a class="btn btn-primary generate-pdf" (click)="generatePDF()">
+        <i class="fas fa-download"></i> Gerar PDF
+    </a>
     <br>
     <br>
-</form>
+</div>
