--- a/src/app/restrict/expense/view-expense/view-variable-expense/view-variable-expense.component.css
+++ b/src/app/restrict/expense/view-expense/view-variable-expense/view-variable-expense.component.css
@@ -1,38 +1,51 @@
 .text-title {
-    color: #0c43f8 !important;
-    font-weight: bold !important;
-    font-family: "Times New Roman", Times, serif;
-  }
-  
-  .text-blue {
-    color: #0c43f8 !important;
-    font-family: "Times New Roman", Times, serif;
-  }
-  .text-gray {
-    color: #44494d !important;
-    font-family: "Times New Roman", Times, serif;
-  }
-  
-  .container {
-    margin-top: 30px;
-  }
-  
-  input.ng-invalid.ng-touched {
-    border: 1px solid red;
-  }
-  
-  .error-message {
-    background-color: #fadadd;
-    padding: 2px;
-  }
-  
-  .expense-description {
-    background-color:  #f7f7f8;
-    text-align: justify; 
-    border: 2px solid #3366ff;
-    padding: 20px; 
-    border-top-right-radius:15px;
-    border-top-left-radius:15px;
-    border-bottom-right-radius:15px;
-    border-bottom-left-radius:15px
-  }
+  color: #0c43f8 !important;
+  font-weight: bold !important;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.text-blue {
+  color: #0c43f8 !important;
+  font-family: "Times New Roman", Times, serif;
+}
+.text-gray {
+  color: #44494d !important;
+  font-family: "Times New Roman", Times, serif;
+}
+
+.container {
+  margin-top: 30px;
+}
+
+input.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+
+.error-message {
+  background-color: #fadadd;
+  padding: 2px;
+}
+
+.expense-description {
+  background-color:  #f7f7f8;
+  text-align: justify; 
+  border: 2px solid #3366ff;
+  padding: 20px; 
+  border-top-right-radius:15px;
+  border-top-left-radius:15px;
+  border-bottom-right-radius:15px;
+  border-bottom-left-radius:15px
+}
+
+.generate-pdf {
+  color: #fff;
+  margin-left: 300px;
+  margin-right: 0px;
+  margin-bottom: 10px;
+  size: auto;
+}
+
+.resume-data {
+  margin-top: 10px;
+  margin-left: 40px;
+}
