--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,49 +1,41 @@
 <div class="limiter">
-  <div class="container-login100">
-    <div class="wrap-login100 p-t-50 p-b-90">
-      <form class="login100-form validate-form flex-sb flex-w" 
-      (ngSubmit)="onSubmit()">
-        <span class="login100-form-title p-b-51"> Login </span>
+  <div class="container-login">
+    <div class="wrap-login">
+      <form class="login-form" (ngSubmit)="onSubmit()">
+        <span class="login-title"> Login </span>
+
+        <!--return back button-->
+        <a class="return-back" routerLink="/" ><i class="fas fa-arrow-circle-left"></i> voltar</a>
 
         <!--Username-->
-        <a routerLink="/" class="txt1">voltar</a>
-        <div class="wrap-input100 validate-input m-b-16">      
-          <input type="text" [(ngModel)]="user.username" class="input100"
-          id="username" name="username" placeholder="Username" required #username="ngModel">
-          <span class="focus-input100"></span>
+        <div class="wrap-input">      
+            <input required class="input" type="text" [(ngModel)]="user.username"
+                name="username" placeholder="Username" #username="ngModel">
+            <span class="focus-input"></span>
         </div>
         
         <!--password-->
-        <div class="wrap-input100 validate-input m-b-16">
-          <input class="input100" type="password" [(ngModel)]="user.password"
-          name="password" placeholder="Password">
-          <span class="focus-input100"></span>
+        <div class="wrap-input">
+          <input required class="input" type="password" [(ngModel)]="user.password" 
+              name="password" placeholder="Password" #password="ngModel">
+          <span class="focus-input"></span>
         </div>
         
-        <div class="flex-sb-m w-full p-t-3 p-b-24">
-          <div class="contact100-form-checkbox">
-            <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-            <label class="label-checkbox100" for="ckb1">
-              Remember me
-            </label>
-          </div>
-
-          <div>
-            <a href="#" class="txt1">
-              Forgot?
-            </a>
-          </div>
+        <div class="forgot-wrapper">
+            <input class="input-checkbox" id="remember" type="checkbox" name="remember">
+            <label class="label-checkbox" for="remember"> Lembrar-me</label>
+            <div>
+                <a class="forgot" routerLink="/forgot">Esqueceu-se da Password?</a>
+            </div>
         </div>
 
-        <div class="container-login100-form-btn m-t-17">
-          <button (click)="login()" class="login100-form-btn" type="submit"> Login </button>
-          
+        <div class="login-button">
+          <button class="login-form-btn" type="submit"> Login </button>
         </div>
       </form>
     </div>
   </div>
 </div>
-<div id="dropDownSelect1"></div>
 
 
 
