--- a/src/app/restrict/expense/list-expenses/list-standard/list-standard.component.html
+++ b/src/app/restrict/expense/list-expenses/list-standard/list-standard.component.html
@@ -19,7 +19,7 @@
         <td>{{ item.expenseName }}</td>
         <td>{{ item.expenseType }}</td>
         <td>{{ item.expenseDate }}</td>
-        <td>{{ item.total }}</td>
+        <td>{{ item.expenseTotal }}</td>
         <td colspan="3">
             <button class="btn btn-secondary" type="button" (click)="onPrint(item)"><i class="far fa-file-pdf"></i></button>
             &nbsp;
