--- a/src/app/restrict/expense/update-expense/update-fixed-expense/update-fixed-expense.component.html
+++ b/src/app/restrict/expense/update-expense/update-fixed-expense/update-fixed-expense.component.html
@@ -27,13 +27,13 @@
       <div class="row">
           <!--month reference -->
           <div class="col-sm-6">
-              <select id="month" name="month" class="form-control ml-1" [(ngModel)]="expense.month">
+              <select id="month" name="month" class="form-control ml-1">
                   <option *ngFor="let month of months"> {{ month }} </option>
               </select>
           </div>
           <!--year reference-->
           <div class="col-sm-6">
-              <select id="year" name="year" class="form-control ml-1" [(ngModel)]="expense.year">
+              <select id="year" name="year" class="form-control ml-1">
                   <option *ngFor="let year of years" [value]="year"> {{ year }} </option>
               </select>
           </div>
@@ -44,7 +44,7 @@
           <div class="col-sm-12">
               <label>Observações:</label>
               <textarea name="expenseName" type="text" rows="2" class="form-control ml-1"
-                  [(ngModel)]="expense.comments"></textarea>
+                  [(ngModel)]="expense.expenseDescription"></textarea>
           </div>
       </div>
       <br>
@@ -75,7 +75,7 @@
           <div class="col-sm-6">
               <label for="total">Custo total:</label>
               <input required id="total" type="Number" min="0" name="total" class="form-control ml-1"
-                  [(ngModel)]="expense.total" #total="ngModel">
+                  [(ngModel)]="expense.expenseTotal" #total="ngModel">
           </div>
           <span class="help-block" *ngIf="!total.valid && total.touched"> O total da despesa é obrigatório</span>
       </div>
@@ -89,4 +89,11 @@
   </div>
   <br>
   <br>
+
+
+
+
+
+
+  
 </form>
