--- a/src/app/restrict/expense/update-expense/update-variable-expense/update-variable-expense.component.html
+++ b/src/app/restrict/expense/update-expense/update-variable-expense/update-variable-expense.component.html
@@ -28,7 +28,7 @@
       <div class="col-sm-12">
         <label>Observações:</label>
         <textarea name="expenseName" type="text" rows="2" class="form-control ml-1"
-          [(ngModel)]="expense.comments"></textarea>
+          [(ngModel)]="expense.expenseDescription"></textarea>
       </div>
     </div>
   </div>
