--- a/src/app/restrict/expense/view-expense/view-fixed-expense/view-fixed-expense.component.html
+++ b/src/app/restrict/expense/view-expense/view-fixed-expense/view-fixed-expense.component.html
@@ -21,19 +21,19 @@
             <br>
             <div class="row">
                 <div class="col-sm-6">
-                    <label><b> Referente a:</b></label> {{     expense.month }} {{ expense.year }}
+                    <label><b> Referente a:</b></label>
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-sm-12">
-                    <label><b>Observações:</b></label> {{    expense.comments}}
+                    <label><b>Observações:</b></label> {{    expense.expenseDescription}}
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-sm-6">
-                    <label><b>Custo total:</b></label> {{     expense.total }}
+                    <label><b>Custo total:</b></label> {{     expense.expenseTotal }}
                 </div>
             </div>
         </div>
