--- a/src/app/restrict/expense/add-expenses/add-fixed-expense/add-fixed-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-fixed-expense/add-fixed-expense.component.html
@@ -23,28 +23,12 @@
             </div>
         </div>
         <br>
-        <label for="month">Referente a:</label>
-        <div class="row">
-            <!--month reference -->
-            <div class="col-sm-6">
-                <select id="month" name="month" class="form-control ml-1" [(ngModel)]="expense.month">
-                    <option *ngFor="let month of months"> {{ month }} </option>
-                </select>
-            </div>
-            <!--year reference-->
-            <div class="col-sm-6">
-                <select id="year" name="year" class="form-control ml-1" [(ngModel)]="expense.year">
-                    <option *ngFor="let year of years" [value]="year"> {{ year }} </option>
-                </select>
-            </div>
-        </div>
-        <br>
         <!-- comments -->
         <div class="row">
             <div class="col-sm-12">
                 <label>Observações:</label>
                 <textarea name="expenseName" type="text" rows="2" class="form-control ml-1"
-                    [(ngModel)]="expense.comments"></textarea>
+                    [(ngModel)]="expense.expenseDescription"></textarea>
             </div>
         </div>
         <br>
@@ -75,7 +59,7 @@
             <div class="col-sm-6">
                 <label for="total">Custo total:</label>
                 <input required id="total" type="Number" min="0" name="total" class="form-control ml-1"
-                    [(ngModel)]="expense.total" #total="ngModel">
+                    [(ngModel)]="expense.expenseTotal" #total="ngModel">
             </div>
             <span class="help-block" *ngIf="!total.valid && total.touched"> O total da despesa é obrigatório</span>
         </div>
@@ -89,4 +73,13 @@
     </div>
     <br>
     <br>
+
+
+
+
+
+
+
+
+    
 </form>
