--- a/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
@@ -27,7 +27,7 @@
       <div class="col-sm-12">
         <label>Observações:</label>
         <textarea name="expenseName" type="text" rows="2" class="form-control ml-1"
-          [(ngModel)]="expense.comments"></textarea>
+          [(ngModel)]="expense.expenseDescription"></textarea>
       </div>
     </div>
   </div>
@@ -43,14 +43,14 @@
       <div class="col-sm-6">
         <label [attr.for]="'itemName'+i" class="control-label">Nome do item:</label>
         <input required [id]="'itemName'+i" name="itemName{{i}}" type="text" class="form-control"
-          [(ngModel)]="obj.name" #item="ngModel">
+          [(ngModel)]="obj.itemName" #item="ngModel">
         <span class="help-block" *ngIf="item.invalid && item.touched"> O nome do item é obrigatório</span>
       </div>
       <!--item description-->
       <div class="col-sm-6">
         <label for="description">Descrição:</label>
         <textarea id="description" name="description{{i}}" type="text" rows="1" class="form-control"
-          [(ngModel)]="obj.description"></textarea>
+          [(ngModel)]="obj.itemDescription"></textarea>
       </div>
     </div>
     <br>
@@ -59,7 +59,7 @@
       <div class="col-sm-6">
         <label for="value" class="control-label">Valor:</label>
         <input required id="value" name="value{{i}}" type="number" min="0" class="form-control"
-          [(ngModel)]="obj.value" #val="ngModel" (blur)="valueSum()">
+          [(ngModel)]="obj.itemValue" #val="ngModel" (blur)="valueSum()">
         <span class="help-block" *ngIf="val.invalid && val.touched"> O valor do item é obrigatório </span>
         <br>
       </div>
@@ -114,4 +114,9 @@
   </div>
   <br>
   <br>
+
+
+
+
+  
 </form>
