need to fix the undefined subscription problem

--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -11,9 +11,9 @@
         <li routerLinkActive="active"><a routerLink="/servicos" style="cursor: pointer;">Serviços</a></li>
         <li routerLinkActive="active"><a routerLink="/faq" style="cursor: pointer;">FAQs</a></li>
         <li><a> </a></li>
-        <li><a routerLink="/login" class="btn btn-primary">Entrar </a></li>
+        <li><a routerLink="/login" class="btn btn-primary login-button">Entrar </a></li>
         <li><a> </a></li>
-        <li><a routerLink="/criar-conta" class="btn btn-primary">Criar Conta </a></li>
+        <li><a routerLink="/criar-conta" class="btn btn-primary login-button">Criar Conta </a></li>
       </ul>
     </nav>
   </div>
