--- a/src/app/public/public.component.css
+++ b/src/app/public/public.component.css
@@ -19,6 +19,13 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+.login-button {
+  background-color: #3366ff
+}
+.login-button:hover {
+  background-color: #fff;
+}
+
 /*--------------------------------------------------------------
 # Header
 --------------------------------------------------------------*/
