--- a/src/app/restrict/restrict.component.html
+++ b/src/app/restrict/restrict.component.html
@@ -16,6 +16,7 @@
       </li>
       <hr class="sidebar-divider" >
 
+
       <!--Expenses-->
       <div class="sidebar-heading text-white">Despesas</div>
       <!-- Add expenses-->
@@ -173,7 +174,7 @@
                   <div class="col">
                     <div ngbDropdown class="d-inline-block">
                       <button class="btn btn-dark" id="dropdownBasic1" 
-                      ngbDropdownToggle>Ben-Vindo {{ username }} &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
+                      ngbDropdownToggle>Bem-Vindo {{ username }} &nbsp;&nbsp;<i class="far fa-user-circle"></i>&nbsp;</button>
                       <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
                         <button ngbDropdownItem ><i class="fas fa-user"></i> Perfil</button>
                         <button ngbDropdownItem><i class="fas fa-cog"></i> Definições</button>
