--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="limiter">
   <div class="container-login">
     <div class="wrap-login">
-      <form class="login-form" (ngSubmit)="onSubmit()">
+      <form class="login-form" (ngSubmit)="onSubmit()" #form="ngForm">
         <span class="login-title"> Login </span>
 
         <!--return back button-->
@@ -11,14 +11,16 @@
         <div class="wrap-input">      
             <input required class="input" type="text" [(ngModel)]="user.username"
                 name="username" placeholder="Username" #username="ngModel">
-            <span class="focus-input"></span>
+            <!--<span class="focus-input"></span>-->
+            <span class="help-block" *ngIf="!username.valid && username.touched"></span>
         </div>
         
         <!--password-->
         <div class="wrap-input">
           <input required class="input" type="password" [(ngModel)]="user.password" 
               name="password" placeholder="Password" #password="ngModel">
-          <span class="focus-input"></span>
+          <!-- <span class="focus-input"></span> -->
+          <span class="help-block" *ngIf="!password.valid && password.touched"></span>
         </div>
         
         <div class="forgot-wrapper">
@@ -30,7 +32,7 @@
         </div>
 
         <div class="login-button">
-          <button class="login-form-btn" type="submit"> Login </button>
+          <button class="login-form-btn" type="submit" [disabled]="!form.valid"> Login </button>
         </div>
       </form>
     </div>
