first commit since last break

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -24,9 +24,9 @@
         <div class="col-xl-8 col-lg-7 d-flex">
           <div class="icon-boxes d-flex flex-column justify-content-center">
             <div class="row">
-              <div class="align-items-stretch">
+              <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box">
-                  <a class="why-us-boxes"><i class="fas fa-file-invoice-dollar"></i>  Despesas</a>
+                  <a class="why-us-boxes"><i class="fas fa-file-invoice-dollar"></i>Despesas</a>
                   <div >
                     Pode efetuar diversas operações com as despesas, tais como: criar, procurar, visualizar,
                     alterar e apagar.
@@ -35,7 +35,7 @@
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
-                  <a class="why-us-boxes"><i class="fas fa-dollar-sign"></i>  Receitas</a>
+                  <a class="why-us-boxes"><i class="fas fa-dollar-sign"></i>Receitas</a>
                   <div >
                     À semelhança das despesas, tambem aqui pode fazer uma gestão efetiva de receitas, tal como:
                     criar, procurar, visualizar, alterar e apagar.
@@ -44,7 +44,7 @@
               </div>
               <div class="col-xl-4 d-flex align-items-stretch">
                 <div class="icon-box mt-4 mt-xl-0">
-                  <a  class="why-us-boxes"><i class="fas fa-chart-pie"></i>  Calcular Lucros e Perdas</a>
+                  <a  class="why-us-boxes"><i class="fas fa-chart-pie"></i>Calculos</a>
                   <div >
                     Para que possa gerir o seu orçamento, a ET-Costs contem algoritmos de cálculo para 
                     que possa visualizar o relacionamento entre todas as suas despesas e lucros.
