--- a/src/app/public/public.component.html
+++ b/src/app/public/public.component.html
@@ -30,7 +30,7 @@
 <!-- End Welcome -->
 
 <br><br><br>
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
 <br><br><br>
 
 <!-- ======= Footer ======= -->
